# ContinuousIntegrationDeployment

./: 404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: cd.yml  ci.yml
API/: index.html
assets/readme/: index.html
code-examples/: index.html
docs/: API.md
search/: search_index.json
src/continuousintegrationdeployment/: __init__.py
tests/: test_template_package.py
