[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
name = "ContinuousIntegrationDeployment"
version = "0.0.1"
description = "A small example package managed with uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars==1.37.0",
]
authors = [
  { name = "Mitchell Mecham", email = "mechamit000@gmail.com" },
  { name = "Co Author", email = "coauthor@example.com" }
]

maintainers = [
  { name = "Maintainer Name", email = "maintainer@example.com" }
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocstrings",
    "mkdocstrings-python",
    "python-markdown-math",
]

[tool.uv.sources]
ContinuousIntegrationDeployment = { workspace = true }

[project.scripts]
my-uv-cli = "my_uv_package.cli:main"

[tool.uv]
# uv-specific configuration